--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
     "gulp-replace": "~0.2.0",
     "gulp-open": "~0.2.8",
     "gulp-clean": "~0.2.4",
-    "gulp-iconfont": "0.0.3",
-    "gulp-ejs": "~0.1.2"
-  },
-  "dependencies": {
-    "gulp-bump": "~0.1.3"
+    "gulp-ejs": "~0.1.2",
+    "gulp-bump": "~0.1.3",
+    "gulp-load-plugins": "~0.2.0"
   }
 }
