Added more ignores to bower.json

--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,13 @@
     "bower_components",
     "test",
     "tests",
-    "src"
+    "src",
+    "lib",
+    "Rakefile",
+    "*.md",
+    "Gemfile",
+    "*.gemspec",
+    "bower.json",
+    ".gitignore"
   ]
 }
