--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-clean": "~0.2.4",
     "gulp-ejs": "~0.1.2",
     "gulp-bump": "~0.1.3",
-    "gulp-load-plugins": "~0.2.0"
+    "gulp-load-plugins": "~0.2.0",
+    "gulp-sass": "~0.6.0"
   }
 }
