--- a/package.json
+++ b/package.json
@@ -16,15 +16,21 @@
   "author": "James Nicol",
   "license": "BSD",
   "devDependencies": {
-    "gulp": "~3.4.0",
-    "gulp-minify-css": "~0.2.0",
-    "gulp-rename": "~0.2.2",
-    "gulp-replace": "~0.2.0",
-    "gulp-open": "~0.2.8",
-    "gulp-clean": "~0.2.4",
-    "gulp-ejs": "~0.1.2",
+    "gulp": "^3.9.1",
     "gulp-bump": "~0.1.3",
-    "gulp-load-plugins": "~0.2.0",
-    "gulp-sass": "~0.6.0"
+    "gulp-clean": "~0.2.4",
+    "gulp-concat": "^2.6.0",
+    "gulp-ejs": "~0.1.2",
+    "gulp-html-minifier": "^0.1.8",
+    "gulp-load-plugins": "^0.2.0",
+    "gulp-minify-css": "~0.2.0",
+    "gulp-open": "~0.2.8",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^0.2.2",
+    "gulp-replace": "~0.2.0",
+    "gulp-uglify": "^1.5.3"
+  },
+  "dependencies": {
+    "gulp-install": "^0.6.0"
   }
 }
